@@ -2,15 +2,15 @@ package conf.security.jwt;
 
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.User;
-import conf.security.ApiAuthenticationFilter;
-import conf.security.TokenInfo;
+import conf.security.api.ApiAuthenticationFilter;
+import conf.security.api.TokenInfo;
 
-import javax.servlet.FilterChain;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class JwtAuthenticationFilter extends ApiAuthenticationFilter {
 
@@ -24,7 +24,6 @@ public class JwtAuthenticationFilter extends ApiAuthenticationFilter {
         this.jwtKey = jwtKey;
     }
 
-
     @Override
     protected void successfulAuthentication(
             HttpServletRequest request,
@@ -35,12 +34,18 @@ public class JwtAuthenticationFilter extends ApiAuthenticationFilter {
 
         List<String> roles = user.getAuthorities()
                 .stream()
-                .map(role -> role.getAuthority())
-                .collect(Collectors.toList());
+                .map(GrantedAuthority::getAuthority)
+                .toList();
 
         String token = new JwtHelper(jwtKey)
                 .encode(new TokenInfo(user.getUsername(), roles));
 
         response.addHeader("Authorization", "Bearer " + token);
+    }
+
+    @Override
+    protected void saveToSession(HttpServletRequest request,
+                                 Authentication authentication) {
+        // do not save anything
     }
 }
